{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 202,
  "lineage": "867b0aae-c9d6-4964-144a-06a8304465bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:loadbalancer/app/alb-ltia/1c14c7ced661ecb3",
            "arn_suffix": "app/alb-ltia/1c14c7ced661ecb3",
            "dns_name": "alb-ltia-1837307221.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:056531562467:loadbalancer/app/alb-ltia/1c14c7ced661ecb3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-ltia",
            "security_groups": [
              "sg-0e66550f47fc7d51b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00650879ef2e18277"
              },
              {
                "subnet_id": "subnet-06c382eb4155af773"
              }
            ],
            "subnets": [
              "subnet-00650879ef2e18277",
              "subnet-06c382eb4155af773"
            ],
            "vpc_id": "vpc-0f4038dc59864a1f1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:listener/app/alb-ltia/1c14c7ced661ecb3/d2699b08242dae15",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:056531562467:listener/app/alb-ltia/1c14c7ced661ecb3/d2699b08242dae15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:loadbalancer/app/alb-ltia/1c14c7ced661ecb3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_targets",
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb",
            "arn_suffix": "targetgroup/apache-targets/085023d5ecd246cb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "apache-targets",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "apache1_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb-20201205022726307900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb",
            "target_id": "i-0e30b4b3a82370ddb"
          },
          "dependencies": [
            "aws_alb_target_group.alb_targets",
            "aws_instance.apache1",
            "aws_key_pair.ssh_key",
            "aws_security_group.apache_sg",
            "aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "apache2_target_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb-20201205022718298900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:056531562467:targetgroup/apache-targets/085023d5ecd246cb",
            "target_id": "i-012e8362a8ff6dd5b"
          },
          "dependencies": [
            "aws_alb_target_group.alb_targets",
            "aws_instance.apache2",
            "aws_key_pair.ssh_key",
            "aws_security_group.apache_sg",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ed0fef59810d4dc6",
            "domain": "vpc",
            "id": "eipalloc-0eba55e4092a4d918",
            "network_interface": "eni-022ab18045c121be7",
            "private_dns": "ip-172-51-0-4.ec2.internal",
            "private_ip": "172.51.0.4",
            "public_dns": "ec2-184-73-50-205.compute-1.amazonaws.com",
            "public_ip": "184.73.50.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:056531562467:instance/i-054851b2ebfb15090",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054851b2ebfb15090",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance_key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c43e523e5132c53",
            "private_dns": "ip-172-51-0-10.ec2.internal",
            "private_ip": "172.51.0.10",
            "public_ip": "52.91.142.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05d9b2feecd282ee1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00650879ef2e18277",
            "tags": {
              "Name": "Jumphost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097c306bb5173a58d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.jumphost_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:056531562467:instance/i-0e30b4b3a82370ddb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e30b4b3a82370ddb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance_key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee65cdfef5b19ec1",
            "private_dns": "ip-172-51-1-103.ec2.internal",
            "private_ip": "172.51.1.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00d415645907e0d9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a23def7489739baa",
            "tags": {
              "Name": "Apache1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4fd93fbcdef1854"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.apache_sg",
            "aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:056531562467:instance/i-012e8362a8ff6dd5b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012e8362a8ff6dd5b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance_key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02fdd6a23604ae973",
            "private_dns": "ip-172-51-2-132.ec2.internal",
            "private_ip": "172.51.2.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08633ef65337ba417",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fd715c519507a1c",
            "tags": {
              "Name": "Apache2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4fd93fbcdef1854"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.apache_sg",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_ltia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:internet-gateway/igw-01411cbb1d16700d8",
            "id": "igw-01411cbb1d16700d8",
            "owner_id": "056531562467",
            "tags": {
              "Name": "igw_ltia"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_ltia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eba55e4092a4d918",
            "id": "nat-005d809652afd32da",
            "network_interface_id": "eni-022ab18045c121be7",
            "private_ip": "172.51.0.4",
            "public_ip": "184.73.50.205",
            "subnet_id": "subnet-00650879ef2e18277",
            "tags": {
              "Name": "natgw_ltia"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de9623752d648f33",
            "owner_id": "056531562467",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-005d809652afd32da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_nat_rt"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw_ltia",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dfd8847d15339ab1",
            "owner_id": "056531562467",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01411cbb1d16700d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_subnet_route"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_ltia",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_rt_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0257f16fa307d2ed7",
            "route_table_id": "rtb-0de9623752d648f33",
            "subnet_id": "subnet-0a23def7489739baa"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw_ltia",
            "aws_route_table.private_nat_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082c8f490ad9de72",
            "route_table_id": "rtb-0de9623752d648f33",
            "subnet_id": "subnet-00fd715c519507a1c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw_ltia",
            "aws_route_table.private_nat_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f1958955c4d783b",
            "route_table_id": "rtb-0dfd8847d15339ab1",
            "subnet_id": "subnet-00650879ef2e18277"
          },
          "dependencies": [
            "aws_internet_gateway.igw_ltia",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de30ac57fa0eb04e",
            "route_table_id": "rtb-0dfd8847d15339ab1",
            "subnet_id": "subnet-06c382eb4155af773"
          },
          "dependencies": [
            "aws_internet_gateway.igw_ltia",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:security-group/sg-0c4fd93fbcdef1854",
            "description": "Allow incoming HTTP connections and SSH from jumphost",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4fd93fbcdef1854",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097c306bb5173a58d"
                ],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e66550f47fc7d51b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache_web_sg",
            "name_prefix": null,
            "owner_id": "056531562467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apache_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_security_group.jumphost_sg",
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:security-group/sg-0e66550f47fc7d51b",
            "description": "Allow incoming http requests to ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e66550f47fc7d51b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": null,
            "owner_id": "056531562467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumphost_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:security-group/sg-097c306bb5173a58d",
            "description": "Allow incoming SSH to Jumphost",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097c306bb5173a58d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jumphost_sg",
            "name_prefix": null,
            "owner_id": "056531562467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jumphost_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:subnet/subnet-0a23def7489739baa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.51.1.0/24",
            "id": "subnet-0a23def7489739baa",
            "map_public_ip_on_launch": false,
            "owner_id": "056531562467",
            "tags": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:subnet/subnet-00fd715c519507a1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.51.2.0/24",
            "id": "subnet-00fd715c519507a1c",
            "map_public_ip_on_launch": false,
            "owner_id": "056531562467",
            "tags": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:subnet/subnet-00650879ef2e18277",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.51.0.0/28",
            "id": "subnet-00650879ef2e18277",
            "map_public_ip_on_launch": true,
            "owner_id": "056531562467",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:subnet/subnet-06c382eb4155af773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.51.16.0/28",
            "id": "subnet-06c382eb4155af773",
            "map_public_ip_on_launch": true,
            "owner_id": "056531562467",
            "tags": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0f4038dc59864a1f1"
          },
          "dependencies": [
            "aws_vpc.vpc_ltia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ltia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056531562467:vpc/vpc-0f4038dc59864a1f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.51.0.0/16",
            "default_network_acl_id": "acl-02658d8022242c024",
            "default_route_table_id": "rtb-0e3cd7239e64e431b",
            "default_security_group_id": "sg-04c012287fa1a28c0",
            "dhcp_options_id": "dopt-5e711b24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f4038dc59864a1f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e3cd7239e64e431b",
            "owner_id": "056531562467",
            "tags": {
              "Name": "vpc_ltia"
            }
          }
        }
      ]
    }
  ]
}